--- a/tests/html5Forms/css/form.css
+++ b/tests/html5Forms/css/form.css
@@ -1,6 +1,22 @@
 @import url("useragentmanExample.css");
 @import url("basicForm.css");
 
+form {
+	width: 600px;
+	margin: 0 auto;
+}
+
+.field-container {
+	margin-bottom: 10px;
+}
+
+label {
+	font-weight: bold;
+	text-align: right;
+	display: inline-block;
+	width: 40%;
+}
+
 input[required], select[required] {
 	background: #ffffee url("../images/asterix.gif")  no-repeat left 2px !important;
 	padding-left: 1.5em;
@@ -25,7 +41,11 @@ input:invalid {
 		
 }
 
-table.formTable input[type="submit"] {
-	width: auto;	
+input[type="submit"] {
+	display: block;
+	width: auto;
+	margin: 0 auto;	
 }
+
+
 
